--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
         </div>
     </div>
 </body>
-
+<script src="./js/jquery.js"></script>
+<script src="./js/p5.min.js"></script>
+<script src="./js/p5.sound.min.js"></script>
+<script src="./js/script.js"></script>
 </html>
