--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>A gift for you</title>
     <link type="text/css" href="css/main.css" rel="stylesheet" />
     <link type="text/css" href="css/minbox.css" rel="stylesheet" />
     <link type="text/css" href="css/maxbox.css" rel="stylesheet" />
     <link type="text/css" href="css/flex-system.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body class="row flex">
