--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>A gift for you</title>
     <link type="text/css" href="css/main.css" rel="stylesheet" />
+    <link type="text/css" href="css/text.css" rel="stylesheet" />
     <link type="text/css" href="css/minbox.css" rel="stylesheet" />
     <link type="text/css" href="css/maxbox.css" rel="stylesheet" />
     <link type="text/css" href="css/flex-system.css" rel="stylesheet" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
-<body class="row flex">
+<body class="column flex">
     <div class="column flex align-center">
         <div class="box">
             <ul class="minbox">
@@ -34,9 +35,11 @@
             </ol>
         </div>
     </div>
+    <p class="text-container"><span>Hover to open the box !!!</span></p>
 </body>
 <script src="./js/jquery.js"></script>
 <script src="./js/p5.min.js"></script>
 <script src="./js/p5.sound.min.js"></script>
 <script src="./js/script.js"></script>
+
 </html>
