--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 <body class="column flex">
     <div class="column flex align-center">
-        <div class="box">
+        <div id="loading">
+            <img src="./img/loading.gif" style="width: 100px; height: 100px" />
+        </div>
+        <div id="main_box" class="box hidden">
             <ul class="minbox">
                 <li></li>
                 <li></li>
@@ -33,9 +36,11 @@
                 <li></li>
                 <li></li>
             </ol>
+            
         </div>
     </div>
-    <p class="text-container"><span>Hover to open the box !!!</span></p>
+    <p id="guide_text" class="text-container hidden"><span>Hover to open the box !!!</span></p>
+    <p id="wait_text" class="text-container"><span>Wait a minute...</span></p>
 </body>
 <script src="./js/jquery.js"></script>
 <script src="./js/p5.min.js"></script>
