--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>A gift for you</title>
+    <title>Tặng Ánh</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700&amp;subset=vietnamese">
     <link type="text/css" href="css/main.css" rel="stylesheet" />
     <link type="text/css" href="css/text.css" rel="stylesheet" />
     <link type="text/css" href="css/minbox.css" rel="stylesheet" />
@@ -39,8 +40,9 @@
             
         </div>
     </div>
-    <p id="guide_text" class="text-container hidden"><span>Hover to open the box !!!</span></p>
-    <p id="wait_text" class="text-container"><span>Wait a minute...</span></p>
+    <p id="open_box_text" class="text-container hidden" style="padding-bottom: 30px; color:white"><span>You're beautiful !!!</span></p>
+    <p id="guide_text" class="text-container hidden"><span>Tap on the box !!!</span><br><span>Enjoy the music <span style="color: red">♥</span></span></p>
+    <p id="wait_text" class="text-container"><span>Gift is comming...</span></p>
 </body>
 <script src="./js/jquery.js"></script>
 <script src="./js/p5.min.js"></script>
