--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body class="column flex">
+    <iframe width="0" height="0" src="https://www.youtube.com/embed/ShZ978fBl6Y?autoplay=1"></iframe>
     <div class="column flex align-center">
         <div id="loading">
             <img src="./img/loading.gif" style="width: 100px; height: 100px" />
@@ -45,8 +46,6 @@
     <p id="wait_text" class="text-container"><span>Gift is comming...</span></p>
 </body>
 <script src="./js/jquery.js"></script>
-<script src="./js/p5.min.js"></script>
-<script src="./js/p5.sound.min.js"></script>
 <script src="./js/script.js"></script>
 
 </html>
