--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tặng Ánh</title>
+    <title>Ánh</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700&amp;subset=vietnamese">
     <link type="text/css" href="css/main.css" rel="stylesheet" />
     <link type="text/css" href="css/text.css" rel="stylesheet" />
@@ -16,7 +16,7 @@
 </head>
 
 <body class="column flex">
-    <iframe width="200" height="200" src="https://www.youtube.com/embed/ShZ978fBl6Y?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1" height="1" src="https://www.youtube.com/embed/ShZ978fBl6Y?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div class="column flex align-center">
         <div id="loading">
             <img src="./img/loading.gif" style="width: 100px; height: 100px" />
