--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="column flex">
-    <iframe width="1" height="1" src="https://www.youtube.com/embed/ShZ978fBl6Y?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1" height="1" src="https://www.youtube.com/embed/IvAbKoKYTfE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div class="column flex align-center">
         <div id="loading">
             <img src="./img/loading.gif" style="width: 100px; height: 100px" />
@@ -42,8 +42,8 @@
         </div>
     </div>
     <p id="open_box_text" class="text-container hidden" style="padding-bottom: 30px; color:white"><span>You're beautiful !!!</span></p>
-    <p id="guide_text" class="text-container hidden" style="text-align: center"><span>Dê chuột vào hộp đi !!!</span><br><span>Không có nhạc thì Ctrl + F5 nhé <span style="color: red">♥</span></span></p>
-    <p id="wait_text" class="text-container"><span>Chờ xíu na...</span></p>
+    <p id="guide_text" class="text-container hidden" style="text-align: center"><span>Hover me !!!</span><br><span>Merry Christmas <span style="color: red">♥</span></span></p>
+    <p id="wait_text" class="text-container"><span>Wait a minute...</span></p>
 </body>
 <script src="./js/jquery.js"></script>
 <script src="./js/script.js"></script>
